--- a/homepage/search-modal/search-modal.component.scss
+++ b/homepage/search-modal/search-modal.component.scss
@@ -3,7 +3,10 @@
        -moz-border-radius: 1px !important;
             border-radius: 1px !important;
   }
-  
+  .container{
+    position: fixed;
+
+  }
   #logo {
   color: #666;
   width:100%;   
