--- a/admin/new-student/new-student.component.scss
+++ b/admin/new-student/new-student.component.scss
@@ -18,3 +18,7 @@
   .example-radio-button {
     margin: 5px;
   }
+  .background {background-color: rgb(208, 190, 183);
+    width: 100%;
+    height: 100%;
+    position: fixed;}
