--- a/homepage/homepage.component.html
+++ b/homepage/homepage.component.html
@@ -17,13 +17,7 @@
     <a href="#contact" class="w3-bar-item w3-button w3-hide-small"
       ><i class="fa fa-envelope"></i> CONTACT</a
     >
-    <button
-      class="w3-bar-item w3-button w3-hide-small"
-      routerLink="/search-modal"
-    >
-      <i class="fa fa-envelope"></i>
-      Reserve Books!
-    </button>
+
     <button class="w3-bar-item w3-button w3-hide-small" routerLink="/login">
       <i class="fa fa-envelope"></i>
       Login!
@@ -94,7 +88,6 @@
       <br />
       <img
         src="https://basmo.app/wp-content/uploads/2021/12/quotes-about-reading-books-1024x690.webp"
-        alt="QUOTES"
         width="500"
         height="333"
       />
@@ -124,8 +117,6 @@
     </div>
   </div>
 </div>
-
-<!-- Container (Portfolio Section) -->
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
   <h3 class="w3-center">Why are books important?</h3>
   <p class="w3-center">
@@ -137,7 +128,6 @@
   </p>
   <br />
 
-  <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
       <img
@@ -215,7 +205,6 @@
   </div>
 </div>
 
-<!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
   <h3 class="w3-center">WHERE I WORK</h3>
 
@@ -290,15 +279,26 @@
         </li>
         <br />
         <li style="color: red">
-          SEND AN EMAIL TO GET YOUR USERNAME AND PASSWORD TO
-          CONTROL YOUR PANEL.
+          SEND AN EMAIL TO GET YOUR USERNAME AND PASSWORD TO CONTROL YOUR PANEL.
         </li>
         <br />
-        <li style="color: red">
-          STAY TURNED AND CHECK YOUR EMAIL!
-        </li>
-        <br>
+        <li style="color: red">STAY TURNED AND CHECK YOUR EMAIL!</li>
+        <br />
       </form>
+
+      <div class="mapouter">
+        <div class="gmap_canvas">
+          <iframe
+            class="gmap_iframe"
+            width="100%"
+            frameborder="0"
+            scrolling="no"
+            marginheight="0"
+            marginwidth="0"
+            src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=ikubinfo&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+          ></iframe>
+        </div>
+      </div>
     </div>
   </div>
 </div>
