--- a/homepage/homepage.component.scss
+++ b/homepage/homepage.component.scss
@@ -19,5 +19,20 @@ html {
 	min-height: 400px;
   background-image: url("https://dg.imgix.net/can-christians-benefit-from-books-by-nonbelievers-r30biiui-en/landscape/can-christians-benefit-from-books-by-nonbelievers-r30biiui.jpg?ts=1481222504&amp;ixlib=rails-4.2.0&amp;fit=crop&amp;w=2000&amp;h=1050") ;
   }
-}
+}  
+// .mapouter {
+//   position: relative;
+//   text-align: right;
+//   width: 100%;
+//   height: 400px;
+// }
+// .gmap_canvas {
+//   overflow: hidden;
+//   background: none !important;
+//   width: 100%;
+//   height: 400px;
+// }
+// .gmap_iframe {
+//   height: 400px !important;
+// }
 
