--- a/student/panel/panel.component.html
+++ b/student/panel/panel.component.html
@@ -1,5 +1,10 @@
 <div class="w3-padding-64 w3-content" id="Panel">
-  <button class="w3-button w3-light-grey w3-padding-large" type="submit" [routerLink]="['/reserve']" routerLinkActive="router-link-active" >
+  <button
+    class="w3-button w3-light-grey w3-padding-large"
+    type="submit"
+    [routerLink]="['/reserve']"
+    routerLinkActive="router-link-active"
+  >
     <i class="fa-solid fa-check"></i>
     Reserve book
     <i class="fa-solid fa-check"></i>
@@ -11,8 +16,8 @@
   <table class="table">
     <thead>
       <tr>
-        <th scope="col">Name</th>
-        <th scope="col">Email</th>
+        <th scope="col">Book Name</th>
+        <th scope="col">Author</th>
         <th scope="col">Date</th>
         <th scope="col">Status</th>
       </tr>
