--- a/admin/books-list/books-list.component.scss
+++ b/admin/books-list/books-list.component.scss
@@ -11,15 +11,16 @@
 .example-radio-group {
     display: flex;
     flex-direction: column;
-    margin: 15px;
+    margin: 15px 0;
     align-items: flex-start;
   }
   
   .example-radio-button {
     margin: 5px;
   }
-  .background {background-color: rgb(208, 190, 183);
-width: 100%;
-height: 100%;
-position: fixed;
+.color{
+    background-color: rgb(212, 224, 224);
+}
+.scss{
+    background-color:rgb(243, 235, 235);
 }
