--- a/admin/books/books.component.html
+++ b/admin/books/books.component.html
@@ -3,13 +3,14 @@
     <div class="container mt-5 px-2">
       <div class="mb-4 d-flex justify-content-between align-items-center">
         <div class="position-relative">
-          <form>
+          <form [formGroup]="form">
             <div class="mb-3">
               <h3>Book Name</h3>
               <input
                 type="text"
                 class="form-control"
-                id="Book Name"
+                id="BookName"
+                formControlName="BookName"
                 placeholder="Book Name"
                 minlength="2"
               />
@@ -17,6 +18,7 @@
             <div class="mb-3">
               <h3>Author</h3>
               <input
+              formControlName="Name"
                 type="text"
                 class="form-control"
                 id="Name"
@@ -32,6 +34,7 @@
               href="#"
               routerLinkActive="active"
               ariaCurrentWhenActive="page"
+              (click)="goToAdd()"
             >
               Generate a new book !
             </button>
