--- a/admin/new-student/new-student.component.html
+++ b/admin/new-student/new-student.component.html
@@ -23,39 +23,38 @@
               />
             </div>
             <div class="mb-3">
-              <h3>Name</h3>
+              <h3>Name, Last Name</h3>
               <input
                 type="text"
                 class="form-control"
-                id="Name"
-                formControlName="Name"
-                placeholder="Name"
+                id="Emri"
+                placeholder="Name, Last Name"
                 required
-                minlength="3"
+                minlength="5"
               />
             </div>
-            <div class="mb-3">
-              <h3>Last name</h3>
-              <input
-                type="text"
-                class="form-control"
-                id="lastname"
-                formControlName="lastname"
-                placeholder="lastname"
-                required
-                minlength="3"
-              />
-            </div>
+       
             <div class="mb-3">
               <h3>Email</h3>
               <input
                 type="text"
                 class="form-control"
                 id="Email"
-                formControlName="Email"
                 placeholder="Email"
                 required
                 minlength="7"
+              />
+            </div>
+            <div class="mb-3">
+              <h3>Username</h3>
+              <input
+                type="text"
+                class="form-control"
+                id="username"
+                formControlName="username"
+                placeholder="Username"
+                required
+                minlength="3"
               />
             </div>
             <div class="mb-3">
@@ -63,20 +62,23 @@
               <input
                 type="text"
                 class="form-control"
-                id="Password"
-                formControlName="Password"
+                id="password"
+                formControlName="password"
                 placeholder="Password"
                 required
-                minlength="2"
+                minlength="3"
               />
             </div>
-
+            <div *ngIf="!form.valid" class="error">
+              <p>Please complete the required placeholders!</p>
+            </div>
             <hr />
             <button
               type="button"
               class="btn btn-primary"
               href="#"
               routerLinkActive="active"
+              (click)="goToAdd()"
               ariaCurrentWhenActive="page"
             >
               Generate a new student !
