--- a/homepage/search-modal/search-modal.component.html
+++ b/homepage/search-modal/search-modal.component.html
@@ -1,33 +1,51 @@
+
+  <div class="container mt-5 px-2">
+    <button
+      type="button"
+      class="btn btn-danger"
+      href="#"
+      routerLink="/home"
+      routerLinkActive="active"
+      ariaCurrentWhenActive="page"
+    >
+      Turn back to the main page
+    </button>
+  </div>
 <div class="container" style="margin-top: 10%">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-md-6 col-md-offset-3" >
     <div class="row">
       <div id="logo" class="text-center">
         <h1>Search Every BooK!</h1>
         <br />
         <p>Here You Will Find The Description Of The Book!</p>
       </div>
-      <form role="form" id="form-buscar">
-        <div class="form-group">
-          <div class="input-group">
-            <input
-              id="1"
-              class="form-control"
-              type="text"
-              name="search"
-              placeholder="Search..."
-              formControlName="filter"
-              (input)="filter()"
-              required
-            />
-            <span class="input-group-btn">
-              <button class="btn btn-success" type="submit">
-                <i class="glyphicon glyphicon-search" aria-hidden="true"></i>
-                Search
-              </button>
-            </span>
-          </div>
-        </div>
+      <form role="form" id="form-buscar" [formGroup]="form">
+        <mat-form-field class="example-full-width" appearance="fill">
+          <mat-label>Search</mat-label>
+          <input
+            type="text"
+            matInput
+            formControlName="search"
+            (input)="filter()"
+            [matAutocomplete]="auto"
+          />
+          <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+            <mat-option *ngFor="let option of allData" [value]="option">
+              <div (click)="display(option)">
+                {{ option.volumeInfo.title }}
+              </div>
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
       </form>
+    </div>
+    <div *ngFor="let data of displayData">
+      <h1>{{ data.volumeInfo.title }}</h1>
+      <h2>{{ data.volumeInfo.authors[0] }}</h2>
+      <p>{{ data.volumeInfo.description }}</p>
+      <img
+        src="{{ data.volumeInfo.imageLinks.thumbnail }}"
+      />
     </div>
   </div>
 </div>
