--- a/login/login.component.html
+++ b/login/login.component.html
@@ -7,14 +7,21 @@
             src="https://media.istockphoto.com/id/157482029/photo/stack-of-books.jpg?s=612x612&amp;w=0&amp;k=20&amp;c=ZxSsWKNcVpEzrJ3_kxAUuhBCT3P_dfnmJ81JegPD8eE="
           /><small>Login to your account!</small></span
         >
-        <form (ngSubmit)="onSubmit()" [formGroup]="loginForm">
+        <form [formGroup]="loginForm">
           <div class="form-inputs">
-            <input type="text" placeholder="User Name" required minlength="3" />
+            <input
+              type="text"
+              placeholder="User Name"
+              formControlName="username"
+              required
+              minlength="3"
+            />
             <div class="password">
               <input
                 id="password"
                 type="password"
                 placeholder="Password"
+                formControlName="password"
                 minlength="3"
               />
               <div *ngIf="!loginForm.valid" class="error">
@@ -26,7 +33,7 @@
               </div>
               <p class="random_password"></p>
             </div>
-            <input id="submit_button" type="submit" />
+            <input id="submit_button" type="submit" (click)="test()" />
           </div>
         </form>
       </div>
