--- a/student/reserve/reserve.component.html
+++ b/student/reserve/reserve.component.html
@@ -12,94 +12,104 @@
     </button>
   </div>
   <div class="scss">
-    <div class="container mt-5 px-2">
+    <form [formGroup]="form">
+      <div class="container mt-5 px-2">
         <div class="mb-2 d-flex justify-content-between align-items-center">
-            <div class="position-relative">
-              <span class="position-absolute search"><i class="search"></i> </span>
-              <button>
-                <form>
-                  <input
-                    type="search"
-                    required
-                    class="form-control w-100"
-                    placeholder="Search Student Id!"
-                    formControlName="filter"
-                    (input)="filter()"
-                  />
-                </form>
-              </button>
-            </div>
+          <div class="position-relative">
+            <span class="position-absolute search"
+              ><i class="search"></i>
+            </span>
+            <button>
+              <input
+                type="search"
+                required
+                class="form-control w-100"
+                placeholder="Search Books!"
+                formControlName="filter"
+                (input)="filter()"
+              />
+            </button>
           </div>
-      <div class="mat-elevation-z8">
-        <table class="table table-responsive table-borderless">
-          <thead>
-            <tr class="bg-light">
-              <th scope="col" width="21%">Book Name</th>
-              <th scope="col" width="21%">Author</th>
-              <th scope="col" width="21%">Select Date</th>
-              <th scope="col" width="21%">Reserve</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Book Name</td>
-              <td>Author</td>
-              <mat-form-field>
-                <mat-date-range-input [rangePicker]="picker">
-                  <input matStartDate placeholder="Start date" />
-                  <input matEndDate placeholder="End date" />
-                </mat-date-range-input>
-                <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
-                <mat-datepicker-toggle
-                  matIconSuffix
-                  [for]="picker"
-                ></mat-datepicker-toggle>
-                <mat-date-range-picker #picker></mat-date-range-picker>
-              </mat-form-field>
+        </div>
+        <div class="mat-elevation-z8">
+          <table class="table table-responsive table-borderless">
+            <thead>
+              <tr class="bg-light">
+                <th scope="col" width="21%">Book Name</th>
+                <th scope="col" width="21%">Author</th>
+                <th scope="col" width="21%">Select Date</th>
+                <th scope="col" width="21%">Reserve</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Book Name</td>
+                <td>Author</td>
+                <mat-form-field>
+                  <mat-date-range-input [rangePicker]="picker">
+                    <input matStartDate placeholder="Start date" />
+                    <input matEndDate placeholder="End date" />
+                  </mat-date-range-input>
+                  <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+                  <mat-datepicker-toggle
+                    matIconSuffix
+                    [for]="picker"
+                  ></mat-datepicker-toggle>
+                  <mat-date-range-picker #picker></mat-date-range-picker>
+                </mat-form-field>
 
-              <td>
-                <button
-                  mat-raised-button
-                  type="button"
-                  class="btn btn-primary mr-1"
-                >
-                  Save!
-                </button>
-              </td>
-            </tr>
-            <hr />
-            <thead></thead>
-            <tr>
-              <td>Book Name</td>
-              <td>Author</td>
-              <mat-form-field appearance="fill">
-                <mat-date-range-input [rangePicker]="picker">
-                  <input matStartDate placeholder="Start date" />
-                  <input matEndDate placeholder="End date" />
-                </mat-date-range-input>
-                <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
-                <mat-datepicker-toggle
-                  matIconSuffix
-                  [for]="picker"
-                ></mat-datepicker-toggle>
-                <mat-date-range-picker #picker></mat-date-range-picker>
-              </mat-form-field>
+                <td>
+                  <button
+                    mat-raised-button
+                    type="button"
+                    class="btn btn-primary mr-1"
+                  >
+                    Save!
+                  </button>
+                </td>
+              </tr>
+              <hr />
+              <thead></thead>
+              <tr>
+                <td>Book Name</td>
+                <td>Author</td>
+                <mat-form-field appearance="fill">
+                  <mat-date-range-input>
+                    <input
+                      matStartDate
+                      formControlName="startdate"
+                      placeholder="Start date"
+                    />
+                    <input
+                      matEndDate
+                      formControlName="enddate"
+                      placeholder="End date"
+                    />
+                  </mat-date-range-input>
+                  <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+                  <mat-datepicker-toggle
+                    matIconSuffix
+                    [for]="picker"
+                  ></mat-datepicker-toggle>
+                  <mat-date-range-picker #picker></mat-date-range-picker>
+                </mat-form-field>
 
-              <td>
-                <button
-                  mat-raised-button
-                  type="button"
-                  class="btn btn-primary mr-1"
-                >
-                  Save!
-                </button>
-              </td>
-            </tr>
-            <hr />
-            <thead></thead>
-          </tbody>
-        </table>
+                <td>
+                  <button
+                    mat-raised-button
+                    type="button"
+                    class="btn btn-primary mr-1"
+                  >
+                    Save!
+                  </button>
+                </td>
+              </tr>
+              <hr />
+              <thead></thead>
+            </tbody>
+          </table>
+        </div>
       </div>
-    </div>
+    </form>
   </div>
 </div>
